updating with generative component

--- a/RAG_beta.ipynb
+++ b/RAG_beta.ipynb
@@ -2,12 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6ecee2ca-aea4-406c-ba5d-54a4c294e98a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import arXiv_rag as ar # local file"
+    "import arXiv_rag as ar # local file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b9fbf2f3-94b2-4469-a054-6e73325fe609",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "from openai import OpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "from IPython.display import Markdown, display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1527b7f0-7118-477f-a9f9-e520785f9e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load_dotenv()  # load environment variables from .env\n",
+    "#openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8d66d8ed-67dd-415a-8b35-dd353f117082",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "\n",
+    "client = OpenAI(api_key=os.getenv(\"OPENAI_API_KEY\"))\n",
+    "\n",
+    "ping_client = False\n",
+    "#ping_client = True\n",
+    "\n",
+    "if ping_client:\n",
+    "    try:\n",
+    "        response = client.chat.completions.create(\n",
+    "            model=\"gpt-4o\",\n",
+    "            messages=[\n",
+    "                {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "                {\"role\": \"user\", \"content\": \"What is 2 + 2?\"}\n",
+    "            ]\n",
+    "        )\n",
+    "\n",
+    "        print(\"✅ Success! Response:\")\n",
+    "        print(response.choices[0].message.content)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error: {e}\")\n"
    ]
   },
   {
@@ -70,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "15185675-9a0b-4846-bf94-7d6127f499fa",
    "metadata": {},
    "outputs": [],
@@ -101,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fc9be6b2-108a-45da-a744-88ca2ca14462",
    "metadata": {},
    "outputs": [],
@@ -125,10 +181,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "9e9a1f10-c9cf-4b54-a2b4-de87a87814b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ask a physics question.  I will return papers with abstracts for you to read:  Are there any recent papers on the Higgs Boson?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top Matching Abstracts:\n",
+      "\n",
+      "--- [1] Searching for charged Higgs bosons via $e^+ e^- \\to H^\\pm W^\\mp S$ at the ILC ---\n",
+      " Abstract: We investigate the phenomenology of the charged Higgs boson at the\n",
+      "International Linear Collider (ILC) within the framework of the type-X\n",
+      "Two-Higgs Doublet Model (2HDM), where a light charged Higgs boson, with a mass\n",
+      "around 200 GeV or even smaller than top quark mass, is still being consistent\n",
+      "with flavor physics data as well as with the colliders experimental data. In\n",
+      "the theoretically and experimentally allowed parameter space, the $e^+ e^- \\to\n",
+      "H^\\pm W^\\mp S$ (with $S = H, A$) production processes can yield signatures with\n",
+      "event rates larger than those from $e^+ e^- \\to H^+ H^-$ and offer sensitivity\n",
+      "to the Higgs mixing parameter $\\sin(\\beta-\\alpha)$. We consider the bosonic\n",
+      "$H^\\pm \\to W^\\pm S$ decays, where the neutral scalar $S$ further decays into a\n",
+      "pair of tau leptons. We show, through a detector-level Monte Carlo analysis,\n",
+      "that the resulting $[\\tau\\tau][\\tau\\tau] WW$ final state could be seen at the\n",
+      "ILC with at least 500 GeV center-of-mass energy and 500 fb$^{-1}$ of\n",
+      "luminosity.\n",
+      "\n",
+      " arXiv link: http://arxiv.org/pdf/2506.01554v1\n",
+      "————————————————————————————————————————————————————————————————————————————————\n",
+      "--- [2] A new probe of the quartic Higgs self-coupling ---\n",
+      " Abstract: We calculate the corrections to the Higgs wave-function renormalization\n",
+      "constant arising from modified cubic, quartic, and quintic Higgs self-couplings\n",
+      "up to the two-loop level. Using our analytic results, we derive two-dimensional\n",
+      "constraints on the modifications of the considered Higgs self-interactions that\n",
+      "could potentially be set from precision measurements of single-Higgs production\n",
+      "processes at the high-luminosity Large Hadron Collider (LHC) and a Future\n",
+      "Circular Collider. Our novel constraints are compared to those that might be\n",
+      "set by searches for multi-Higgs production at the same facilities. In view of\n",
+      "the first LHC results on triple-Higgs production, we also review the current\n",
+      "status of Higgs self-coupling determinations after LHC Run 2.\n",
+      "\n",
+      " arXiv link: http://arxiv.org/pdf/2505.20463v1\n",
+      "————————————————————————————————————————————————————————————————————————————————\n",
+      "--- [3] New Physics Search at the CEPC: a General Perspective ---\n",
+      " Abstract: The Circular Electron-Positron Collider (CEPC), a proposed next-generation\n",
+      "Higgs factory, provides new opportunities to explore physics beyond the\n",
+      "Standard Model (SM). With its clean electron-positron collision environment and\n",
+      "the ability to collect large samples of Higgs, W, and Z bosons, the CEPC\n",
+      "enables precision measurements and searches for new physics. This white paper\n",
+      "outlines the CEPC's discovery potential, including studies of exotic decays of\n",
+      "the Higgs, Z, and top quarks, dark matter and dark sector phenomena, long-lived\n",
+      "particles, supersymmetry, and neutrino-related signatures. Advanced detector\n",
+      "technologies and reconstruction techniques, such as one-to-one correspondence\n",
+      "reconstruction and jet origin identification, significantly improve sensitivity\n",
+      "to rare and weakly interacting processes. The CEPC is particularly well suited\n",
+      "to probe the electroweak phase transition and test models of electroweak\n",
+      "baryogenesis and dark sector interactions. In addition, global fit analyses\n",
+      "highlight the CEPC's complementary role in constraining a wide range of new\n",
+      "physics scenarios. These features position the CEPC as a powerful tool for\n",
+      "exploring the next frontier in fundamental particle physics in the post-Higgs\n",
+      "discovery era.\n",
+      "\n",
+      " arXiv link: http://arxiv.org/pdf/2505.24810v1\n",
+      "————————————————————————————————————————————————————————————————————————————————\n"
+     ]
+    }
+   ],
    "source": [
     "query = input(\"Ask a physics question.  I will return papers with abstracts for you to read: \")\n",
     "ppr = ar.retrieve_similar_abstracts(query)"
@@ -144,23 +270,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2e6e9a1d-2031-4219-9ba9-9e4edc973743",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "This query will provide a list of titles. Please ask your question:  Are there any recent papers on the Higgs Boson?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top Matches:\n",
+      "\n",
+      "--- [1] Searching for charged Higgs bosons via $e^+ e^- \\to H^\\pm W^\\mp S$ at the ILC ---\n",
+      "--- [2] A new probe of the quartic Higgs self-coupling ---\n",
+      "--- [3] New Physics Search at the CEPC: a General Perspective ---\n"
+     ]
+    }
+   ],
    "source": [
     "query = input(\"This query will provide a list of titles. Please ask your question: \")\n",
-    "ppr = ar.retrieve_similar_abstracts(query, include_abstract = False)"
+    "ppr_titles = ar.retrieve_similar_abstracts(query, include_abstract = False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e4ba8479-69c3-4a22-88e1-99dbdbfdd3d6",
+   "id": "990d3740-7ec5-4387-95fc-fda1ca75cd19",
    "metadata": {},
    "source": [
-    "## More to come...\n",
+    "## Step 5:  Adding a generative AI componment\n",
     "\n",
-    "This is really all there is to setting up a RAG functionality using an API for a data source and a basic sentence transformer.  Our next step will be to set up some tokens so that we can feed this into ChatGPT to make it a little more user friendly!"
+    "For this you are going to need to add your API key to .env and make sure you have tokens:\n",
+    "```python\n",
+    "OPENAI_API_KEY=sk-proj-cy...\n",
+    "``` \n",
+    "\n",
+    "### Model Overview: GPT-4o\n",
+    "\n",
+    "**GPT-4o** (\"o\" for *omni*) is OpenAI's most advanced and versatile model as of 2024. It is optimized for **multimodal reasoning**, supporting text, vision, and audio inputs (though this notebook uses text-only).\n",
+    "\n",
+    "Key characteristics:\n",
+    "\n",
+    "-  **High Accuracy**: Comparable to GPT-4-turbo in reasoning tasks, with improved response coherence and factuality.\n",
+    "-  **Faster & Cheaper**: Lower latency and cost per token compared to GPT-4-turbo, making it suitable for interactive applications.\n",
+    "-  **Context-Aware**: Supports longer context windows (up to 128k tokens).\n",
+    "-  **Chat-Optimized**: Built for chat-style usage, with conversational memory and role-awareness.\n",
+    "\n",
+    "In this notebook, GPT-4o is used to **synthesize answers** from a set of retrieved arXiv abstracts. The model is provided with relevant context and prompted to generate expert-level answers to user queries.\n",
+    "\n",
+    "API Pricing:\n",
+    "\n",
+    "-  Input: \\$0.005 per 1,000 tokens  \n",
+    "-  Output: \\$0.015 per 1,000 tokens  \n",
+    "\n",
+    "[Token estimator tool](https://platform.openai.com/tokenizer)\n",
+    "\n",
+    "#### Asking GPT-4o Questions About Retrieved arXiv Abstracts\n",
+    "\n",
+    "This cell demonstrates how to use OpenAI's GPT-4o model to analyze and answer questions based on a set of retrieved arXiv paper abstracts. \n",
+    "\n",
+    "The workflow is as follows:\n",
+    "\n",
+    "1. **Retrieve Relevant Abstracts**  \n",
+    "   We use the `retrieve_similar_abstracts()` function to get the top-k papers related to a given query. These papers include metadata such as title and abstract.\n",
+    "\n",
+    "2. **Formulate a Research Question**  \n",
+    "   The user provides a natural language question they'd like to answer using the context of the retrieved papers.\n",
+    "\n",
+    "3. **Query GPT-4o via API**  \n",
+    "   The function `ask_question_about_abstracts()`:\n",
+    "   - Concatenates all titles and abstracts into a single context string\n",
+    "   - Builds a structured prompt with this context plus the user's question\n",
+    "   - Sends it to the GPT-4o model via the OpenAI API\n",
+    "   - Returns a concise and informed answer grounded in the abstract content\n",
+    "\n",
+    "This enables a form of lightweight, domain-specific retrieval-augmented generation (RAG) using just the OpenAI API and local FAISS-based retrieval.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e6ccf6b5-6353-464f-a3ec-707a71a1ad0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "### 🧠 GPT-4o's Answer:\n",
+       "\n",
+       "Recent research on the Higgs boson is focused on several key areas:\n",
+       "\n",
+       "1. **Charged Higgs Bosons**: Studies are being conducted at the International Linear Collider (ILC) to explore the phenomenology of charged Higgs bosons within the type-X Two-Higgs Doublet Model (2HDM). This involves investigating production processes like $e^+ e^- \\to H^\\pm W^\\mp S$ and analyzing decay channels to detect potential signatures of charged Higgs bosons, particularly those lighter than the top quark.\n",
+       "\n",
+       "2. **Higgs Self-Couplings**: Researchers are calculating corrections to the Higgs wave-function renormalization constant due to modified cubic, quartic, and quintic Higgs self-couplings up to the two-loop level. These calculations aim to set constraints on Higgs self-interactions through precision measurements at the high-luminosity LHC and future colliders, enhancing our understanding of Higgs boson interactions.\n",
+       "\n",
+       "3. **New Physics Searches**: The Circular Electron-Positron Collider (CEPC) is proposed as a next-generation Higgs factory, offering opportunities to explore physics beyond the Standard Model. It aims to conduct precision measurements and searches for new physics, including exotic decays of the Higgs, dark matter phenomena, and electroweak phase transition studies. The CEPC's capabilities are expected to significantly advance the exploration of fundamental particle physics in the post-Higgs discovery era.\n",
+       "\n",
+       "Overall, the focus is on understanding the properties and interactions of the Higgs boson, searching for new physics, and testing theoretical models that extend beyond the Standard Model."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "answer = ar.ask_question_about_abstracts(ppr, \"What is going on with the Higgs Boson these days?\")\n",
+    "#print(\"GPT-4o's Answer:\\n\", answer)\n",
+    "answer = ar.format_for_markdown(answer)\n",
+    "display(Markdown(f\"### 🧠 GPT-4o's Answer:\\n\\n{answer}\"))"
    ]
   }
  ],
