Cleaning up notebook

--- a/RAG_beta.ipynb
+++ b/RAG_beta.ipynb
@@ -26,18 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1527b7f0-7118-477f-a9f9-e520785f9e48",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#load_dotenv()  # load environment variables from .env\n",
-    "#openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8d66d8ed-67dd-415a-8b35-dd353f117082",
    "metadata": {},
    "outputs": [],
@@ -126,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "15185675-9a0b-4846-bf94-7d6127f499fa",
    "metadata": {},
    "outputs": [],
@@ -157,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "fc9be6b2-108a-45da-a744-88ca2ca14462",
    "metadata": {},
    "outputs": [],
@@ -181,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "9e9a1f10-c9cf-4b54-a2b4-de87a87814b4",
    "metadata": {},
    "outputs": [
@@ -189,7 +178,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Ask a physics question.  I will return papers with abstracts for you to read:  Are there any recent papers on the Higgs Boson?\n"
+      "Ask a physics question.  I will return papers with abstracts for you to read:  Higgs Bosons\n"
      ]
     },
     {
@@ -231,26 +220,27 @@
       "\n",
       " arXiv link: http://arxiv.org/pdf/2505.20463v1\n",
       "————————————————————————————————————————————————————————————————————————————————\n",
-      "--- [3] New Physics Search at the CEPC: a General Perspective ---\n",
-      " Abstract: The Circular Electron-Positron Collider (CEPC), a proposed next-generation\n",
-      "Higgs factory, provides new opportunities to explore physics beyond the\n",
-      "Standard Model (SM). With its clean electron-positron collision environment and\n",
-      "the ability to collect large samples of Higgs, W, and Z bosons, the CEPC\n",
-      "enables precision measurements and searches for new physics. This white paper\n",
-      "outlines the CEPC's discovery potential, including studies of exotic decays of\n",
-      "the Higgs, Z, and top quarks, dark matter and dark sector phenomena, long-lived\n",
-      "particles, supersymmetry, and neutrino-related signatures. Advanced detector\n",
-      "technologies and reconstruction techniques, such as one-to-one correspondence\n",
-      "reconstruction and jet origin identification, significantly improve sensitivity\n",
-      "to rare and weakly interacting processes. The CEPC is particularly well suited\n",
-      "to probe the electroweak phase transition and test models of electroweak\n",
-      "baryogenesis and dark sector interactions. In addition, global fit analyses\n",
-      "highlight the CEPC's complementary role in constraining a wide range of new\n",
-      "physics scenarios. These features position the CEPC as a powerful tool for\n",
-      "exploring the next frontier in fundamental particle physics in the post-Higgs\n",
-      "discovery era.\n",
+      "--- [3] Loop-corrected Trilinear Higgs Self-Couplings in the NMSSM with Inverse Seesaw Mechanism ---\n",
+      " Abstract: The higher-order corrections for the SM-like Higgs boson mass and the\n",
+      "trilinear Higgs self-couplings in the Next-to-Minimal Supersymmetric extension\n",
+      "of the Standard Model (NMSSM) with Inverse Seesaw Mechanism are significant and\n",
+      "highly correlated. We present here the full one-loop corrections to the\n",
+      "trilinear Higgs self-couplings supplemented by the dominant top-Yukawa and\n",
+      "strong coupling induced two-loop corrections from our previous calculations in\n",
+      "the complex NMSSM. These corrections are performed consistently with the\n",
+      "corresponding Higgs boson mass corrections. We discuss in detail the new\n",
+      "effects from the extended neutrino and sneutrino sectors on both the trilinear\n",
+      "Higgs self-couplings and the SM-like Higgs boson mass. When compared to the\n",
+      "case of the NMSSM without Inverse Seesaw Mechanism, the new effects can be up\n",
+      "to 10\\% for the effective SM-like trilinear Higgs self-couplings, and up to\n",
+      "4.5\\% for the SM-like Higgs boson mass for valid parameter points, i.e. points\n",
+      "satisfying the Higgs data, the neutrino data, the constraints from the charged\n",
+      "lepton flavor-violating decays, and the new physics constraints from the\n",
+      "oblique parameters $S, T, U$. The new corrections are also included in the\n",
+      "Higgs-to-Higgs decays for the heavy Higgs states and implemented in the new\n",
+      "version of the Fortran code NMSSMCALC-nuSS.\n",
       "\n",
-      " arXiv link: http://arxiv.org/pdf/2505.24810v1\n",
+      " arXiv link: http://arxiv.org/pdf/2506.02743v1\n",
       "————————————————————————————————————————————————————————————————————————————————\n"
      ]
     }
@@ -270,30 +260,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2e6e9a1d-2031-4219-9ba9-9e4edc973743",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "This query will provide a list of titles. Please ask your question:  Are there any recent papers on the Higgs Boson?\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Top Matches:\n",
-      "\n",
-      "--- [1] Searching for charged Higgs bosons via $e^+ e^- \\to H^\\pm W^\\mp S$ at the ILC ---\n",
-      "--- [2] A new probe of the quartic Higgs self-coupling ---\n",
-      "--- [3] New Physics Search at the CEPC: a General Perspective ---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = input(\"This query will provide a list of titles. Please ask your question: \")\n",
     "ppr_titles = ar.retrieve_similar_abstracts(query, include_abstract = False)"
@@ -386,7 +356,7 @@
     "answer = ar.ask_question_about_abstracts(ppr, \"What is going on with the Higgs Boson these days?\")\n",
     "#print(\"GPT-4o's Answer:\\n\", answer)\n",
     "answer = ar.format_for_markdown(answer)\n",
-    "display(Markdown(f\"### 🧠 GPT-4o's Answer:\\n\\n{answer}\"))"
+    "display(Markdown(f\"### GPT-4o's Answer:\\n\\n{answer}\"))"
    ]
   }
  ],
